k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 5559  # The port the service is exposed on
    targetPort: 5559  # The target port on the pods, should match SERVER
  selector:
    app: server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: ${NAMESPACE}
spec:
  replicas: 2  # Adjust the number of replicas based on your needs
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: ${DOCKER_ORG}/${PROJECT_NAME}-server:${TAG}  # Replace with your actual image name
        ports:
        - containerPort: 3000  # The port your application listens on, adjust if different
