k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ${NAMESPACE}.${DOMAIN}
    http:
      paths:
      - path: /hasura(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hasura
            port:
              number: 80
      - path: /client(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client
            port:
              number: 80
      - path: /server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server
            port:
              number: 80
  ingressClassName: nginx
